css/vt.css
* {
  -webkit-tap-highlight-color : rgba(0, 0, 0, 0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
}

body {
  -webkit-touch-callout    : none; /* prevent callout to copy image, etc when tap to hold */
  -webkit-text-size-adjust : none; /* prevent webkit from resizing text to fit */
  -webkit-user-select      : none; /* prevent copy paste, to allow, change 'none' to 'text' */
}

.ui-content {
  padding-top: 0;
}

.ui-focus,
.ui-btn:focus {
  /* See http://stackoverflow.com/questions/16972701/how-to-remove-the-blue-halo-glow-from-jquery-mobile-input-elements-that-receive */
  -moz-box-shadow    : none !important;
  -webkit-box-shadow : none !important;
  box-shadow         : none !important;
}

.poll {
  border-bottom: solid thin #009245;
}

body * {
  font-family : "Roboto", sans-serif !important;
  font-weight : normal !important;
}

.ui-btn-up-a, .ui-btn-hover-a, .ui-btn-down-a, .ui-bar-a, .ui-body-a, .ui-btn-up-a, .ui-btn-hover-a, .ui-btn-down-a, .ui-body-a input, .ui-body-a select, .ui-body-a textarea {
  font-family : "Roboto", sans-serif;
}

.hidden,
.not-voted .poll-results-table tfoot,
.not-voted .poll-results-summary-table,
.not-voted hr {
  display : none;
}

.poll-results-table tbody tr:nth-child(even) td {
  background-color : #eeeeee; /* non-RGBA fallback  */
  background-color : rgba(0, 0, 0, .04);
}

.right {
  text-align : right !important;
}

.num {
  text-align  : right !important;
  font-family : "Courier New", Courier, monospace;
}

.poll-results-table {
  counter-reset : rowNumber;
}

.poll-results-table tr {
  counter-increment : rowNumber;
}

.poll-results-table tr td:first-child::before {
  content      : counter(rowNumber) ".";
  min-width    : 1em;
  margin-right : 0.5em;
}

@-webkit-keyframes rotate {
  from {
    transform : rotate(0deg);
  }
  to {
    transform : rotate(360deg);
  }
}

@keyframes rotate {
  from {
    transform : rotate(0deg);
  }
  to {
    transform : rotate(360deg);
  }
}

#vt-header .ui-icon-refresh::after {
  -webkit-animation : rotate 1.5s infinite linear;
  animation         : rotate 1.5s infinite linear;
}

#vt-header.vt-synced .ui-icon-refresh::after {
  -webkit-animation-play-state : paused;
  animation-play-state         : paused;
}

